[gd_scene load_steps=4 format=3 uid="uid://ylnr2d6580ii"]

[ext_resource type="Script" path="res://Player/Weapons/Minigun.gd" id="1_uf2wg"]
[ext_resource type="Texture2D" uid="uid://dokswxnxdx5vn" path="res://Textures/test/minigun.png" id="2_j7eu2"]

[sub_resource type="CircleShape2D" id="CircleShape2D_onfff"]
radius = 339.013

[node name="MiniGun" type="Node2D"]
light_mask = 4
visibility_layer = 4
position = Vector2(0, -13)
script = ExtResource("1_uf2wg")

[node name="GunCooldownTimer" type="Timer" parent="."]
wait_time = 0.2

[node name="DetectArea" type="Area2D" parent="."]
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectArea"]
light_mask = 4
visibility_layer = 4
shape = SubResource("CircleShape2D_onfff")

[node name="GunSprite" type="Sprite2D" parent="."]
unique_name_in_owner = true
texture = ExtResource("2_j7eu2")

[connection signal="shoot" from="." to="." method="_on_shoot"]
[connection signal="timeout" from="GunCooldownTimer" to="." method="_on_gun_cooldown_timer_timeout"]
[connection signal="body_entered" from="DetectArea" to="." method="_on_detect_area_body_entered"]
[connection signal="body_exited" from="DetectArea" to="." method="_on_detect_area_body_exited"]
